# chess-neuralnet-engine-optimizer

./: CMakeLists.txt  README.md
dependencies/: boost.cmake  chess-neuralnet-engine.cmake  chess-neuralnet.cmake
src/: CMakeLists.txt
src/engine_optimizer/: CMakeLists.txt
src/engine_optimizer/amplification_distillation/: CMakeLists.txt  parse_log.cpp
